--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by M. ke100 -->
 
-<head data-next-url data-this-url="prostadine.html">
+<head>
   <meta charset="UTF-8">
   <script
     type="text/javascript">window.NREUM || (NREUM = {}); NREUM.info = { "beacon": "bam.nr-data.net", "errorBeacon": "bam.nr-data.net", "licenseKey": "NRJS-14b9fc0143e6570151a", "applicationID": "545462463", "transactionName": "IgpZQUBdWF8DFEsXEQQXR1RVV0ccFgcDBxFOFUJXXltHWwMC", "queueTime": 0, "applicationTime": 454, "agent": "" }</script>
@@ -30,7 +30,6 @@
   <meta property="og:url" content="https://prostadinepro.com/prostadine">
   <meta property="og:type" content="website">
   <link rel="stylesheet" media="screen" href="assets/lander.css">
-  <link rel="canonical" href="prostadine.html">
   <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.9.0/css/all.css">
   <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.9.0/css/v4-shims.css">
   <link
@@ -521,7 +520,7 @@
                 style="margin-top: 5px; outline: none; cursor: pointer;" aria-disabled="false">
                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0"
                   style="text-align: left; font-size: 21px;" data-bold="inherit" data-gramm="false"
-                  contenteditable="false"><b>August 2022 - New Scientific Discovery</b></h2>
+                  contenteditable="false"><b>2025 - New Scientific Discovery</b></h2>
               </div>
               <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_subheadline-86938-176-114"
                 data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true"
@@ -2348,7 +2347,7 @@
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
                 <div class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0"
                   style="text-align: left; font-size: 18px; color: rgb(255, 255, 255);" data-bold="inherit"
-                  contenteditable="false">Copyright © 2022 - Prostadine</div>
+                  contenteditable="false">Copyright © 2025 - Prostadine</div>
               </div>
             </div>
           </div>
@@ -2436,7 +2435,7 @@
                 style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
                 <div class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0 mfs_18"
                   style="text-align: center; font-size: 16px; color: rgb(255, 255, 255);" data-bold="inherit"
-                  contenteditable="false">Copyright © 2022 - Prostadine</div>
+                  contenteditable="false">Copyright © 2025 - Prostadine</div>
               </div>
             </div>
           </div>
