--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@
                       supplement is manufactured in an FDA-registered and GMP-certified facility in the USA.<br></b>
                   </li>
                   <li style="font-size: 22px;">
-                    <i contenteditable="false" style=" color:rgb(106, 0, 209)" class="fa fa-fw fa-check"></i><b>​For
+                    <i contenteditable="false" style=" color:rgb(106, 0, 209)" class="fa fa-fw fa-check"></i><b>For
                       each purchase, you will get a 60-day of 100% money-back guarantee.<br></b>
                   </li>
                 </ul>
