--- a/index.html
+++ b/index.html
@@ -1556,7 +1556,7 @@
                       naturally.</b>
                   </li>
                   <li style="font-size: 22px;">
-                    <i contenteditable="false" style=" color:rgb(106, 0, 209)" class="fa fa-fw fa-check"></i><b>​ It
+                    <i contenteditable="false" style=" color:rgb(106, 0, 209)" class="fa fa-fw fa-check"></i><b> It
                       keeps your urinary tract clear.<br></b>
                   </li>
                   <li style="font-size: 22px;">
