--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#00bcd4">
 </head>
+<script
+  type="text/javascript">function init() { for (var t = document.getElementsByTagName("img"), e = 0; e < t.length; e++) { var i = t[e].getAttribute("data-src"); if (i) { for (var n = t[e].parentElement, a = 0; 0 == a && n;)a = n.scrollWidth, n = n.parentElement; a && 0 < i.indexOf("images.clickfunnels.com") && (i = "//get-actiflow.com/hosted/images/cdn-cgi/image/fit=scale-down,width=" + a + ",quality=75/" + i), t[e].setAttribute("src", i) } } } window.addEventListener("load", init);</script>
 
 <body data-affiliate-param="affiliate_id" data-show-progress="true">
   <style>
@@ -4928,6 +4930,7 @@
       background: linear-gradient(to right, #6176B5, #4F5FA2, #19265B)
     }
   </style>
+  <script src="cbscript.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
