--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       display: none
     }
   </style>
-  <link rel="icon" type="image/png" href="hosted/images/68/94b4dfd8d4469a9fa5e22097fd9e2f/prostadine-favicon.png">
-  </link>
+  <link rel="alternate" href="https://get-prostadine.vercel.app/" hreflang="en-us" />
+  <link rel="alternate" href="https://get-prostadine.vercel.app/" hreflang="x-default" />
+  <meta name="robots" content="index, follow">
   <meta name="msvalidate.01" content="D706A9CDA41743E14DA57A6DCB2DDAFF" />
   <meta name="google-site-verification" content="jZ-4xgvm4jkQtqSJ2rjz3NtQHXHVf1xCU-st2WTnuJI" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
